# cubosphere-data

./: CMakeLists.txt  README.md
desktop/: CMakeLists.txt
raw/: boot.lua
zip/actordefs/: ancient.adef  aqua.adef  aqua2.adef  arabia.adef  arabia2.adef  arctic.adef  astral.adef  azure.adef  ball1.adef  ball2.adef  canyon.adef  chess.adef  data.adef  deepspace.adef  dream.adef  earth.adef  east.adef  eyeball.adef  frost.adef  greece.adef  green.adef  inca.adef  insolitus.adef  jupiter.adef  mars.adef  mecha.adef  midnight.adef  night.adef  persian.adef  pure.adef  rune.adef  sahara.adef  star.adef  stormy.adef  sunset.adef  tiger.adef  valley.adef  warpzone.adef
zip/actordefs/include/: ball.inc
zip/blockdefs/: _selection.bdef  button.bdef  elevator.bdef  knife.bdef  magnet.bdef  onedir.bdef  rotate.bdef  spikes.bdef  switch.bdef  teleport.bdef  timestop.bdef  warptunnel.bdef
zip/blockdefs/include/: colors.inc
zip/editor/include/: .editor.inc.kate-swp  editor.inc  savelvl.inc
zip/enemydefs/: anomaly.edef  gear.edef  hunter.edef  jumper.edef  randomwalker.edef  rhombus.edef  speeder2.edef  spiked.edef  tutorialball.edef
zip/enemydefs/include/: hunter.inc  random.inc  std.inc
zip/itemdefs/: bouncepill.idef  death.idef  diamond.idef  diamond2.idef  glasses.idef  goldenletter.idef  gravity.idef  nojump.idef  sleepingpill.idef  slowmo.idef  teleport.idef
zip/itemdefs/include/: std.inc
zip/language/: danish.ldef  deutsch.ldef  english.ldef  french.ldef  spanish.ldef
zip/levels/: autoexec.inc
zip/levels/2pe01/: 2pe01l01.ldef  2pe01l02.ldef  2pe01l03.ldef  2pe01l04.ldef  2pe01l05.ldef  2pe01l06.ldef  2pe01l07.ldef  2pe01l08.ldef  2pe01l09.ldef  2pe01l10.ldef  2pe01l11.ldef  2pe01l12.ldef  2pe01l13.ldef  2pe01l14.ldef  2pe01l15.ldef
zip/levels/2pe02/: 2pe02l01.ldef  2pe02l02.ldef  2pe02l03.ldef  2pe02l04.ldef  2pe02l05.ldef  2pe02l06.ldef  2pe02l07.ldef  2pe02l08.ldef  2pe02l09.ldef  2pe02l10.ldef  2pe02l11.ldef  2pe02l12.ldef  2pe02l13.ldef  2pe02l14.ldef  2pe02l15.ldef
zip/levels/2pe03/: 2pe03l01.ldef  2pe03l02.ldef  2pe03l03.ldef  2pe03l04.ldef  2pe03l05.ldef  2pe03l06.ldef  2pe03l07.ldef  2pe03l08.ldef  2pe03l09.ldef  2pe03l10.ldef  2pe03l11.ldef  2pe03l12.ldef  2pe03l13.ldef  2pe03l14.ldef  2pe03l15.ldef
zip/levels/alpine/: alpine01.ldef  alpine02.ldef  alpine03.ldef  alpine04.ldef  alpine05.ldef  alpine06.ldef  alpine07.ldef  alpine08.ldef  alpine09.ldef  alpine10.ldef  alpine11.ldef  alpine12.ldef  alpine13.ldef  alpine14.ldef  alpine15.ldef
zip/levels/anc/: anc01.ldef  anc02.ldef  anc03.ldef  anc04.ldef  anc05.ldef  anc06.ldef  anc07.ldef  anc08.ldef  anc09.ldef  anc10.ldef  anc11.ldef  anc12.ldef  anc13.ldef  anc14.ldef  anc15.ldef
zip/levels/azure/: azure01.ldef  azure02.ldef  azure03.ldef  (+12 more)
zip/mdldefs/: aqua.mdef  aqua2.mdef  arabia.mdef  arabia2.mdef  bonus.mdef  data.mdef  deepspace.mdef  diamond.mdef  magnet.mdef  warp.mdef  warptunnel.mdef
zip/menudefs/: bindjoybutton.mdef  bindkey.mdef  changeffaa.mdef  changemode.mdef  classicmode.mdef  confirmquit.mdef  controlsjoy.mdef  controlskeyb.mdef  credits.mdef  deletelevel.mdef  dosavegame.mdef  editorball.mdef  editorblocksel.mdef  editorenemy.mdef  editorenemyattribs.mdef  editorenemysel.mdef  editoritem.mdef  editoritemattribs.mdef  editoritemsel.mdef  editorload.mdef  editormusic.mdef  editornostartpos.mdef  editorplayer.mdef  editorplayersel.mdef  editorsave.mdef  editorsavechanges.mdef  editorsettings.mdef  editorsideattribs.mdef  editorstart.mdef  editortheme.mdef  exploreepisode.mdef  exploremode.mdef  explorenextlevel.mdef  final.mdef  gameselect.mdef  init.mdef  language.mdef  loadgame.mdef  main.mdef  modes.mdef  (+14 more)
zip/particles/: airvent.pdef  blinkingstars.pdef  heatcloud.pdef  pickupfog.pdef  pickupstars.pdef  rebounce.pdef  sand.pdef  telefog.pdef  telefog_load.pdef  warptunnel.pdef  warptunnel_load.pdef
zip/texdefs/: cuboheadline.tdef  phaser.tdef
zip/themedefs/: ancient.themedef  azure.themedef
(+399 files in other folders)
